# widgets

./: Cargo.toml
ftl/en/: attributes.ftl  main.ftl
ftl/ru/: attributes.ftl
src/: const.rs  lib.rs
src/buttons/: about_button.rs  edit_button.rs  layout_buttons.rs  left_panel_button.rs  metadata_button.rs  mod.rs  reactive_button.rs  rename_button.rs  reset_button.rs  resizable_button.rs  save_button.rs  settings_button.rs  sum_button.rs
src/fatty_acids/: mod.rs
src/fatty_acids/settings/: expressions.rs  mod.rs
src/polars/: array.rs
src/settings/: array.rs  highlight_sort_filter.rs  hsf.rs  major.rs  mean.rs  mod.rs  precision.rs  sort.rs  threshold.rs  zero.rs
src/utils/: mod.rs
