[package]
name = "widgets"
version = "0.6.0"
authors = ["Giorgi Vladimirovich Kazakov", "Roman Alexandrovich Sidorov"]
edition = "2024"

[dependencies]
ahash = "0.8.12"
egui = { version = "0.34.2", default-features = false }
typed-builder = "0.23.2"

egui_l20n = { git = "https://github.com/kgv/egui_l20n", branch = "0.6", features = [
    "macros",
] }

const_format = { version = "0.2.36", optional = true }
itertools = { version = "0.14.0", optional = true }
polars = { git = "https://github.com/pola-rs/polars", rev = "bf6a425", default-features = false, features = [
    "dtype-array",
    "dtype-struct",
    "fmt_no_tty",
    "lazy",
], optional = true }
polars-utils = { version = "0.53.0", features = ["nightly"], optional = true }
polars_ext = { git = "https://github.com/kgv/polars_ext", branch = "0.6", features = [
    "array",
], optional = true }

[features]
default = ["polars"]

polars = ["dep:itertools", "dep:polars", "dep:polars-utils", "dep:polars_ext"]
