[package]
name = "widgets"
version = "0.6.1"
authors = ["Giorgi Vladimirovich Kazakov", "Roman Alexandrovich Sidorov"]
edition = "2024"

[dependencies]
ahash = "0.8.12"
const_format = "0.2.36"
egui = { version = "0.34.3", default-features = false }
egui-phosphor = "0.12.0"
egui_dnd = "0.15.0"
egui_tiles = "0.15.0"
itertools = "0.14.0"
ordered-float = { version = "5.3.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "std"] }
typed-builder = "0.23.2"

egui_l10n = { git = "https://github.com/ippras/egui_l10n", branch = "0.6", features = [
    "macros",
] }

polars = { git = "https://github.com/pola-rs/polars", rev = "bf6a425", default-features = false, features = [
    "dtype-array",
    "dtype-struct",
    "fmt_no_tty",
    "lazy",
], optional = true }
polars-utils = { version = "0.53.0", features = ["nightly"], optional = true }
polars_ext = { git = "https://github.com/kgv/polars_ext", branch = "0.6", features = [
    "array",
], optional = true }

fatty_acid_expressions = { git = "https://github.com/ippras/fatty_acid_expressions", optional = true }

[features]
default = ["fatty_acids", "polars"]

fatty_acids = ["dep:fatty_acid_expressions"]
polars = ["dep:polars", "dep:polars-utils", "dep:polars_ext"]
